--- a/views/addcar.ejs
+++ b/views/addcar.ejs
@@ -85,7 +85,7 @@
                 <section>
                     <div class="container-fluid py-3 bg-light">
                         <p class="mt-2">
-                            Cars > <a href="index.html"> List car</a> > Add New Car
+                            Cars > <a href="http://localhost:8019/cars"> List car</a> > Add New Car
                         </p>
 
                         <h4>Add New Car</h4>
