--- a/views/update.ejs
+++ b/views/update.ejs
@@ -85,7 +85,7 @@
                 <section>
                     <div class="container-fluid py-3 bg-light">
                         <p class="mt-2">
-                            Cars > <a href="index.html"> List car</a> > Update Car
+                            Cars > <a href="http://localhost:8019/cars"> List car</a> > Update Car
                         </p>
 
                         <h4>Update Car</h4>
@@ -126,7 +126,7 @@
                                         <input class="form-control form-control-sm" id="formFileSm" type="file" name="photo">
                                     </div>
                                 </div>
-                                <button onclick="Update()" id="berhasil" type="submit" class="btn btn-primary">Add</button>
+                                <button onclick="Update()" id="berhasil" type="submit" class="btn btn-primary">Save</button>
                             </form>
                         </div>
                     </div>
