--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,210 +1,127 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <style>
-    html{
-      overflow-x: hidden;
-    }
-  </style>
-  <title>Cars</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cars</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    <link rel="stylesheet" href="/css/style.css" />
+    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
-<body>
-  <div class="row bg-white">
-    <div style="background-color: #0D28A6;" class="col-1 col-md-1 text-light">
-      <div class="dashboard">
-        <p><i class="bi bi-house-door-fill"></i></p>
-        <b>
-          <h6 class="px-1">Dashboard</h6>
-        </b>
-      </div>
-      <div class="cars">
-        <p><i class="bi bi-house-door-fill"></i></p>
-        <b>
-          <h6 class="px-1">Cars</h6>
-        </b>
-      </div>
-    </div>
-    <div class="col-5 col-md-2 bg-white">
-      <div class="dashboard">
-        <p><i class="bi bi-house-door-fill"></i></p>
-        <b>
-          <p>CARS</p>
-        </b>
-      </div>
-      <div class="cars">
-        <p><i class="bi bi-house-door-fill"></i></p>
-        <b>
-          <p>List Cars</p>
-        </b>
-      </div>
-    </div>
-    <div class="col-12 col-md-9">
-      <nav class="navbar navbar-light bg-white">
-        <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
-            aria-controls="offcanvasNavbar">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-primary" type="submit">Search</button>
-            <div class="profile">
-              <p class="bi bi-down"></p>
-            </div>
-            <img class="rounded-circle mx-3" height="45px" src="../public/diory.jpg" alt="">
-          </form>
-          <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
-            aria-labelledby="offcanvasNavbarLabel">
-            <div class="offcanvas-header">
-              <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
-              <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
-                aria-label="Close"></button>
-            </div>
-            <div class="offcanvas-body">
-              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
-                </li>
-            </div>
-          </div>
+<body id="body-pd">
+    <header class="header navbar navbar-expand-md pe-0" id="header">
+        <div class="d-flex me-auto header_toggle">
+            <i class="bi bi-list mx-4" id="header-toggle"></i>
         </div>
-      </nav>
-      <main>
-        <section>
-          <div class="container-fluid py-3 bg-light">
-            <p class="mt-2">
-              <a style="text-decoration: none;" href="http://localhost:8019/cars">Cars</a> > List car
-            </p>
-            <div class="container-fluid d-flex justify-content-between mt-4">
-              <h4>List Car</h4>
-              <a href="http://localhost:8019/cars/add">
-                <button style="background-color: #0D28A6;" type="button" class="btn text-white"><i class="bi bi-plus-lg"></i><span style="font-size: 20px;">+</span> Add New Car</button>
-              </a>
-            </div>
-
-            <div class="btn-filter mt-2">
-              <button type="button active" class="btn btn-sm btn-outline-primary mx-1">All</button>
-              <button type="button" class="btn btn-sm btn-outline-secondary mx-1">Small</button>
-              <button type="button" class="btn btn-sm btn-outline-secondary mx-1">Medium</button>
-              <button type="button" class="btn btn-sm btn-outline-secondary mx-1">Large</button>
-            </div>
-
-            <div class="row row-cols-1 row-cols-md-3 g-4">
-              <% car.forEach((mobil)=> { %>
-                <div class="col mt-5">
-                  <div class="card h-100">
-                    <img height="200px" src="<%= mobil?.photo %>" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <p>
-                        <%= mobil?.name %> / Tipe Mobil
-                      </p>
-                      <h5 class="card-title">
-                        <b>Rp <%= mobil?.rentPerDay %> /hari</b>
-                      </h5>
-                      <small class="card-text"> <span class="bi bi-time"></span>Updated At <%= mobil?.updatedAt %></small>
-                      <div class="btn-card d-flex justify-content-between">
-                        <a href="/cars/delete/<%= mobil?.id %>" class="btn mx-2 px-4 btn-outline-danger my-3"><i
-                            class="bi bi-trash3"></i>Delete</a>
-                        <a href="/cars/update/<%= mobil?.id %>" class="btn mx-4 px-4 btn-success my-3 "><b
-                            class="bi bi-trash3 "></b>Edit</a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <% }) %>
-                  <!-- <div class="col mt-5">
-                <div class="card h-100">
-                  <img src="..." class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <p>Nama / Tipe Mobil</p>
-                    <h5 class="card-title">rentPerDay</h5>
-                    <small class="card-text">update</small>
-                    <div class="btn-card d-flex justify-content-between">
-                      <a href="#" class="btn btn-outline-danger">Delete</a>
-                      <a href="#" class="btn btn-success">Edit</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col mt-5">
-                <div class="card h-100">
-                  <img src="..." class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <p>Nama / Tipe Mobil</p>
-                    <h5 class="card-title">rentPerDay</h5>
-                    <small class="card-text">update</small>
-                    <div class="btn-card d-flex justify-content-between">
-                      <a href="#" class="btn btn-outline-danger">Delete</a>
-                      <a href="#" class="btn btn-success">Edit</a>
-                    </div>
-                  </div>
-                </div>
-              </div> -->
-
-            </div>
-        </section>
-      </main>
-    </div>
-    
-
-    
-    <div
-      class="modal fade"
-      id="exampleModal1"
-      tabindex="-1"
-      aria-labelledby="exampleModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog">
-        <div class="modal-content bg-light">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Daftar</h5>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="modal-body">
-            <form action="#">
-              <div class="form-group">
-                <label for="">Nama Anda</label><br />
-                <input type="email" class="form-control" />
-              </div>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-danger"
-              data-bs-dismiss="modal"
-            >
-              Hapus
+        <form class="d-flex ms-auto" method="post" action="/search">
+            <input class="form-control mx-2" type="search" placeholder="Search" value="" aria-label="Search" name="search" />
+            <button class="btn btn-outline-primary btn-search" type="submit">Search</button>
+        </form>
+        <div class="btn-group ms-2 user-setting">
+            <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown" data-bs-display="static"
+                aria-expanded="false">
+                <img height="47px" class="rounded-circle" src="../public/diory.jpg" alt="">
             </button>
-          </div>
+            <ul class="dropdown-menu dropdown-menu-sm-end">
+                <li>
+                    <button class="dropdown-item" type="button">Setting</button>
+                </li>
+                <li>
+                    <button class="dropdown-item" type="button">Logout</button>
+                </li>
+            </ul>
         </div>
-      </div>
+    </header>
+
+    <div class="l-navbar" id="nav-bar">
+        <nav class="nav">
+            <table class="h-100">
+                <tr>
+                    <td style="vertical-align: top; width: 60px; padding: 0px">
+                        <img class="nav_logo" src="/images/Rectangle 63.png" />
+                        <a href="/" class="nav_link"><img src="/images/Home.png" alt="" /></a>
+                        <a href="/" class="nav_link active-menu"><img src="/images/Administrator.png" alt="" /></a>
+                    </td>
+                    <td style="vertical-align: top; background-color: #ffffff; padding: 0px">
+                        <img class="nav_logo" src="/images/Rectangle 62.png" />
+                        <p class="nav_title" style="margin-top: 17px">CARS</p>
+                        <a href="" class="nav_title text-black bg-color-1">List Car</a>
+                    </td>
+                </tr>
+            </table>
+        </nav>
     </div>
-  </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-    crossorigin="anonymous"></script>
+    <div class="h-100 mx-4">
+        <nav style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
+            <ol class="breadcrumb pt-3">
+                <li class="breadcrumb-item">
+                    <a class="fw-bold text-black text-decoration-none" href="#">Cars</a>
+                </li>
+                <li class="breadcrumb-item active">List Car</li>
+            </ol>
+        </nav>
+
+        <div class="pt-2 d-flex justify-content-between">
+            <h4 class="h4 fw-bold">List Car</h4>
+            <a href="http://localhost:8019/cars/add">
+                <button style="background-color: #0D28A6;" type="button" class="btn text-white"><i class="bi bi-plus-lg"></i><span style="font-size: 20px;"></span> Add New Car</button>
+            </a>
+        </div>
+
+        <div class="py-3 d-flex justify-content-start">
+            <!-- <button type="submit button active" class="btn btn-outline-primary">All</button> -->
+            <div class="btn-filter mt-2">
+                <a id="all" href="/cars" type="button active" class="btn btn-sm btn-outline-primary mx-1">All</a>
+                <a id="small" href="/cars/small" type="button" class="btn btn-sm btn-outline-secondary mx-1">Small</a>
+                <a id="medium" href="/cars/medium" type="button submit" class="btn btn-sm btn-outline-secondary mx-1">Medium</a>
+                <a id="large" href="/cars/large" type="button" class="btn btn-sm btn-outline-secondary mx-1">Large</a>
+            </div>
+        </div>
+
+        <main>
+            <div class=" row g-4">
+                <% cars.forEach((car)=> { %>
+                    <div class="col-sm-6 mx-4 mt-4 col-lg-6 col-md-4 col-xl-3">
+                        <div class="card h-100">
+                            <div style="text-align: center;" class="img satu">
+                                <img height="200px" src="/<%= car?.photo %>" class="card-img-top" alt="...">
+                            </div>
+                            <div class="card-body">
+                                <p>
+                                    <%= car?.name %> / Tipe Mobil
+                                </p>
+                                <h6 class="card-title">Rp <%= car?.rentPerDay %> /hari</h6>
+                                <small><i class="bi bi-clock"></i>
+                                    Updated At <%= car?.updatedAt %></small>
+
+                                <div class="btn-card mt-3 d-flex justify-content-between">
+                                    <a href="/cars/delete/<%= car?.id %>" class="btn btn-outline-danger"><i
+                                            class="bi bi-trash3"></i>Delete</a>
+                                    <a href="/cars/update/<%= car?.id %>" class="btn btn-success "><b
+                                            class="bi bi-trash3"></b>Edit</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                <% }) %>
+            </div>
+
+        </main>
+        <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+                        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+                        crossorigin="anonymous"></script>
+                    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+                        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+                        crossorigin="anonymous"></script>
+                    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+                        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+                        crossorigin="anonymous"></script> -->
 </body>
 
 </html>
