--- a/views/update.ejs
+++ b/views/update.ejs
@@ -83,25 +83,25 @@
             </nav>
             <main>
                 <section>
-                    <div class="container-fluid py-3 bg-light">
+                    <div class="container-fluid row py-3 bg-light">
                         <p class="mt-2">
                             Cars > <a href="http://localhost:8019/cars"> List car</a> > Update Car
                         </p>
 
                         <h4>Update Car</h4>
-                        <div class="form mb-5 pb-5 bg-light">
-                            <form action="/cars/update/<%= cars?.id %> " method="post" enctype="multipart/form-data">
+                        <div style="margin-top: auto;margin-bottom: auto;" class="form col-lg-6 mb-5 pb-5 bg-light">
+                            <form  action="/cars/update/<%= cars?.id %> " method="post" enctype="multipart/form-data">
                                 <div class="mb-3 row">
                                     <label for="inputNama" class="col-sm-2 col-form-label">Nama</label>
                                     <div class="col-sm-10">
-                                        <input type="text" name="name" class="form-control" id="inputNama">
+                                        <input placeholder="<%= cars?.name %>"   type="text" name="name" class="form-control" id="inputNama">
                                     </div>
                                 </div>
                                 <div class="mb-3 row">
                                     <label for="inputSewa" class="col-sm-2 col-form-label">Sewa Per
                                         Hari</label>
                                     <div class="col-sm-10">
-                                        <input type="number" name="rentPerDay" class="form-control" id="inputSewa">
+                                        <input type="number" name="rentPerDay" class="form-control" id="inputSewa" value="<%= cars?.rentPerDay %>">
                                     </div>
                                 </div>
                                 <div class="mb-3 row">
@@ -128,6 +128,12 @@
                                 </div>
                                 <button onclick="Update()" id="berhasil" type="submit" class="btn btn-primary">Save</button>
                             </form>
+                        </div>
+                        <div class="col-12 mx-4 col-lg-6 col-sm-12 col-md-6  col-xl-5 p-5" style=" text-align: center;">
+                            <img style="margin-top: auto;margin-bottom: auto;" class="rounded" src="/<%= cars?.photo %>" width="100%" alt="" srcset="">
+                            <small>
+                                <%= cars?.photo %>
+                            </small>
                         </div>
                     </div>
                 </section>
